--- a/style.css
+++ b/style.css
@@ -29,7 +29,10 @@ h3{
     color: #8531B6;
 }
 
-
+#btnClear{
+    background-color: #8531B6;
+    margin-bottom: 1em;
+}
 @media(max-width:768px){
     h1{
         text-align: center;
@@ -50,6 +53,6 @@ h3{
         text-align: center;
     }
     table{
-        min-width: 50vh;
+        width: 50px;
     }
 }
